[gd_scene load_steps=3 format=2]

[ext_resource path="res://scripts/EndingScreen.gd" type="Script" id=1]
[ext_resource path="res://scenes/DelayedLabel.tscn" type="PackedScene" id=2]

[node name="EndingScreen" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="DelayedLabel" parent="." instance=ExtResource( 2 )]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -384.0
margin_top = -236.0
margin_right = 384.0
margin_bottom = -175.0
text = "You have entered the void..."
align = 1
show_delay = 10.0

[node name="DelayedLabel2" parent="." instance=ExtResource( 2 )]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -384.0
margin_top = -172.0
margin_right = 384.0
margin_bottom = -111.0
text = "...didn't you forget something?"
align = 1
show_delay = 15.0

[node name="DelayedLabel3" parent="." instance=ExtResource( 2 )]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -384.0
margin_top = 148.0
margin_right = 384.0
margin_bottom = 209.0
text = "Thanks for playing!"
align = 1
show_delay = 20.0
